Fixing hrs and alignment.

--- a/DH2015/xsl/render.css
+++ b/DH2015/xsl/render.css
@@ -11,11 +11,11 @@ div.right {
     margin-right : 5%;
     float: right;
     width: 40%;
-    /*margin-left: 55%;*/
     clear: right; 
 }
 
-
-/*.minheight {
-    min-height: 700px;
-}*/
+hr{
+    border: 0; 
+    height: 1px; 
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
